2002-03-05  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-syntax-checks): Because canlock is
	supported, we disable sender syntax check.
	(message-shoot-gnksa-feet): Add cancel-messages option doc.

	* gnus-draft.el (gnus-draft-send): If interactive, use its default
	value of message-syntax-checks.

	* qp.el (quoted-printable-decode-region): Doc addition.
	From: Eli Zaretskii <eliz@is.elta.co.il>

	* mail-source.el (make-source-make-complex-temp-name): Use
	make-temp-file.

	* mm-util.el (mm-make-temp-file): New function.
	* nneething.el (nneething-file-name): Use it.
	* mml-smime.el (mml-smime-encrypt): Ditto.
	* mm-view.el (mm-inline-wash-with-file): Ditto.
	* mm-decode.el (mm-display-external, mm-create-image-xemacs): Ditto.
	* gnus-uu.el (gnus-uu-decode-binhex, gnus-uu-decode-binhex-view) 
	(gnus-uu-digest-mail-forward, gnus-uu-initialize): Ditto.
	* gnus-start.el (gnus-slave-save-newsrc): Ditto.
	* gnus-fun.el (gnus-convert-image-to-gray-x-face): Ditto.
	* gnus-art.el (gnus-mime-print-part): Ditto.

2002-03-04  Paul Jarc  <prj@po.cwru.edu>

	* message.el (nnmaildir-article-number-to-base-name): New
	function.
	(nnmaildir-base-name-to-article-number): New function.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* smime.el (smime-make-temp-file): Don't quote
	`temporary-file-directory'.

2002-03-04  Simon Josefsson  <jas@extundo.com>

	* smime.el (smime-sign-region): Rename argument keyfiles to
	keyfile. You only sign something with one key.
	(smime-sign-buffer): Better completing-read prompt.
	(smime-decrypt-buffer): Ditto.

	* smime.el (smime-make-temp-file): Make it work under XEmacs.

	* mm-view.el (mm-view-pkcs7-decrypt): Better prompt for
	completing-read.
	(mm-view-pkcs7-decrypt): CRLF->LF.

2002-03-04  Paul Jarc  <prj@po.cwru.edu>

	* message.el (message-hierarchical-addresses): New variable.
	(message-get-reply-headers): Use it.
	From Ted Zlatanov <teodor.zlatanov@divine.com>

2002-03-03  ShengHuo ZHU  <zsh@cs.rochester.edu>
